Add upload and download functionality

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="actions">
       <button class="toggle-btn active" id="toggleViewBtn">🗂️ Switch to Table</button>
       <input class="searchbar" id="search" placeholder="Search pictos by any field...">
+      <button class="toggle-btn" id="uploadBtn">📂 Upload JSON</button>
+      <button class="toggle-btn" id="downloadBtn">💾 Download JSON</button>
+      <input type="file" id="fileInput" accept="application/json" style="display:none">
     </div>
     <div id="cards" style="display:block"></div>
     <div id="table" class="table-view" style="display:none"></div>
