--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Clair Obscur - Pictos</h1>
-    <div class="actions">
+    <div class="container">
+      <h1>Clair Obscur - Pictos</h1>
+      <div class="actions">
       <button class="toggle-btn active" id="toggleViewBtn">🗂️ Switch to Table</button>
       <input class="searchbar" id="search" placeholder="Search pictos by any field...">
       <button class="toggle-btn" id="uploadBtn">📂 Upload JSON</button>
       <button class="toggle-btn" id="downloadBtn">💾 Download JSON</button>
       <input type="file" id="fileInput" accept="application/json" style="display:none">
+      </div>
+      <div id="cards" class="cards" style="display:block"></div>
+      <div id="table" class="table-view" style="display:none"></div>
+      <div id="modal" class="modal" style="display:none"><div class="modal-content"></div></div>
     </div>
-    <div id="cards" style="display:block"></div>
-    <div id="table" class="table-view" style="display:none"></div>
-  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
