fix cards grid layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="toggle-btn" id="downloadBtn">💾 Download JSON</button>
       <input type="file" id="fileInput" accept="application/json" style="display:none">
       </div>
-      <div id="cards" class="cards" style="display:block"></div>
+      <div id="cards" class="cards"></div>
       <div id="table" class="table-view" style="display:none"></div>
       <div id="modal" class="modal" style="display:none"><div class="modal-content"></div></div>
     </div>
