--- a/index.html
+++ b/index.html
@@ -13,11 +13,22 @@
     <div class="container">
       <h1>Clair Obscur - Pictos</h1>
       <div class="actions">
-      <button class="toggle-btn active" id="toggleViewBtn">🗂️ Switch to Table</button>
-      <input class="searchbar" id="search" placeholder="Search pictos by any field...">
-      <button class="toggle-btn" id="uploadBtn">📂 Upload JSON</button>
-      <button class="toggle-btn" id="downloadBtn">💾 Download JSON</button>
-      <input type="file" id="fileInput" accept="application/json" style="display:none">
+        <div class="icon-bar">
+          <button class="icon-btn" id="downloadBtn" title="Download">💾</button>
+          <button class="icon-btn" id="uploadBtn" title="Upload">📂</button>
+          <div class="icon-sep"></div>
+          <button class="icon-btn toggle" id="hideOwnedBtn" title="Hide owned">🙈</button>
+          <button class="icon-btn toggle" id="hideMissingBtn" title="Hide missing">❓</button>
+          <div class="icon-sep"></div>
+          <button class="icon-btn" id="selectAllBtn" title="Select all">✔️</button>
+          <button class="icon-btn" id="clearAllBtn" title="Clear all">🗑️</button>
+          <div class="icon-sep"></div>
+          <button class="icon-btn" id="gridViewBtn" title="Grid view">🃏</button>
+          <button class="icon-btn" id="tableViewBtn" title="Table view">🗂️</button>
+          <div class="icon-sep"></div>
+        </div>
+        <input class="searchbar" id="search" placeholder="Search pictos by any field...">
+        <input type="file" id="fileInput" accept="application/json" style="display:none">
       </div>
       <div id="cards" class="cards"></div>
       <div id="table" class="table-view" style="display:none"></div>
