Load dictionary automatically and remove unused file

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <button class="icon-btn" id="selectAllBtn" title="Select all">✔️</button>
           <button class="icon-btn" id="clearAllBtn" title="Clear all">🗑️</button>
           <div class="icon-sep"></div>
-          <button class="icon-btn" id="gridViewBtn" title="Grid view">🃏</button>
-          <button class="icon-btn" id="tableViewBtn" title="Table view">🗂️</button>
+          <button class="icon-btn" id="gridViewBtn" title="Grid view">🔳</button>
+          <button class="icon-btn" id="tableViewBtn" title="Table view">📋</button>
           <div class="icon-sep"></div>
         </div>
         <input class="searchbar" id="search" placeholder="Search pictos by any field...">
@@ -33,6 +33,7 @@
       <div id="cards" class="cards"></div>
       <div id="table" class="table-view" style="display:none"></div>
       <div id="modal" class="modal" style="display:none"><div class="modal-content"></div></div>
+      <div id="notificationContainer" class="notification-container"></div>
     </div>
   <script src="js/script.js"></script>
 </body>
