--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </ul>
     </div>
   </nav>
-  <main class="container mt-4 flex-grow-1">
+  <main class="content-wrapper mt-4 flex-grow-1">
       <h1>Pictos inventory</h1>
       <div class="actions">
         <div class="icon-bar">
