Add Cinzel font, icons changes and save feature

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Clair Obscur Helper - Pictos inventory</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap-lite.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -22,11 +23,12 @@
       <h1>Pictos inventory</h1>
       <div class="actions">
         <div class="icon-bar">
-          <button class="icon-btn" id="downloadBtn" title="Download">💾</button>
-          <button class="icon-btn" id="uploadBtn" title="Upload">📂</button>
+          <button class="icon-btn" id="downloadBtn" title="Download">⬇️</button>
+          <button class="icon-btn" id="uploadBtn" title="Upload">⬆️</button>
+          <button class="icon-btn" id="saveBtn" title="Sauvegarder">💾</button>
           <div class="icon-sep"></div>
-          <button class="icon-btn toggle" id="hideOwnedBtn" title="Hide owned">🙈</button>
-          <button class="icon-btn toggle" id="hideMissingBtn" title="Hide missing">❓</button>
+          <button class="icon-btn toggle" id="hideOwnedBtn" title="Hide owned">🔒</button>
+          <button class="icon-btn toggle" id="hideMissingBtn" title="Hide missing">👻</button>
           <div class="icon-sep"></div>
           <button class="icon-btn" id="selectAllBtn" title="Select all">✔️</button>
           <button class="icon-btn" id="clearAllBtn" title="Clear all">🗑️</button>
