Use Font Awesome icons

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Clair Obscur Helper - Pictos inventory</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="css/bootstrap-lite.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -23,18 +24,18 @@
       <h1>Pictos inventory</h1>
       <div class="actions">
         <div class="icon-bar">
-          <button class="icon-btn" id="downloadBtn" title="Download">⬇️</button>
-          <button class="icon-btn" id="uploadBtn" title="Upload">⬆️</button>
-          <button class="icon-btn" id="saveBtn" title="Sauvegarder">💾</button>
+          <button class="icon-btn" id="downloadBtn" title="Download"><i class="fa-solid fa-download"></i></button>
+          <button class="icon-btn" id="uploadBtn" title="Upload"><i class="fa-solid fa-upload"></i></button>
+          <button class="icon-btn" id="saveBtn" title="Sauvegarder"><i class="fa-solid fa-floppy-disk"></i></button>
           <div class="icon-sep"></div>
-          <button class="icon-btn toggle" id="hideOwnedBtn" title="Hide owned">🔒</button>
-          <button class="icon-btn toggle" id="hideMissingBtn" title="Hide missing">👻</button>
+          <button class="icon-btn toggle" id="hideOwnedBtn" title="Hide owned"><i class="fa-solid fa-lock"></i></button>
+          <button class="icon-btn toggle" id="hideMissingBtn" title="Hide missing"><i class="fa-solid fa-ghost"></i></button>
           <div class="icon-sep"></div>
-          <button class="icon-btn" id="selectAllBtn" title="Select all">✔️</button>
-          <button class="icon-btn" id="clearAllBtn" title="Clear all">🗑️</button>
+          <button class="icon-btn" id="selectAllBtn" title="Select all"><i class="fa-solid fa-check"></i></button>
+          <button class="icon-btn" id="clearAllBtn" title="Clear all"><i class="fa-solid fa-trash"></i></button>
           <div class="icon-sep"></div>
-          <button class="icon-btn" id="gridViewBtn" title="Grid view">🔳</button>
-          <button class="icon-btn" id="tableViewBtn" title="Table view">📋</button>
+          <button class="icon-btn" id="gridViewBtn" title="Grid view"><i class="fa-solid fa-th"></i></button>
+          <button class="icon-btn" id="tableViewBtn" title="Table view"><i class="fa-solid fa-table"></i></button>
           <div class="icon-sep"></div>
         </div>
         <input class="searchbar" id="search" placeholder="Search pictos by any field...">
