Use header texture for menu background

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
-  <nav class="navbar navbar-dark bg-dark">
+  <nav class="navbar navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Clair Obscur Helper</a>
       <ul class="navbar-nav flex-row">
