--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
       <div id="modal" class="modal" style="display:none"><div class="modal-content"></div></div>
       <div id="notificationContainer" class="notification-container"></div>
   </main>
-  <footer class="bg-dark text-center text-white py-3">
+  <footer class="text-center text-white py-3">
     Copyright oPyRuSo 2025-<span id="year"></span>
   </footer>
   <script src="js/script.js"></script>
