style: adjust header and spacing

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Clair Obscur Helper</a>
-      <ul class="navbar-nav flex-row">
+      <ul class="navbar-nav flex-row ms-auto">
         <li class="nav-item me-3">
           <a class="nav-link active" href="#">Pictos inventory</a>
         </li>
