--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,10 @@
           <a class="nav-link active" href="#" data-i18n="nav_pictos">Pictos inventory</a>
         </li>
       </ul>
-      <select id="languageSelect" class="lang-select ms-auto">
-        <option value="en">EN</option>
-        <option value="fr">FR</option>
-        <option value="de">DE</option>
-        <option value="it">IT</option>
-        <option value="es">ES</option>
-      </select>
+      <div class="lang-flags ms-auto">
+        <span class="lang-flag" data-lang="fr" id="frFlag">🇫🇷</span>
+        <span class="lang-flag" data-lang="en" id="enFlag">🇬🇧</span>
+      </div>
     </div>
   </nav>
   <main class="content-wrapper mt-4 flex-grow-1">
