--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="d-flex flex-column min-vh-100">
-  <nav class="navbar navbar-dark">
-    <div class="container-fluid d-flex flex-nowrap align-items-center">
+    <nav class="navbar navbar-dark">
+      <div class="container-fluid d-flex flex-nowrap align-items-end">
       <a class="navbar-brand" href="#" data-i18n="nav_brand">Clair Obscur Helper</a>
       <ul class="navbar-nav flex-row">
         <li class="nav-item me-3">
