--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-dark">
-      <div class="container-fluid d-flex flex-nowrap align-items-end">
+      <div class="container-fluid header-inner">
       <a class="navbar-brand" href="#" data-i18n="nav_brand">Clair Obscur Helper</a>
       <ul class="navbar-nav flex-row">
         <li class="nav-item me-3">
