tweak header alignment and spacing

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <div class="container-fluid header-inner">
       <a class="navbar-brand" href="#" data-i18n="nav_brand">Clair Obscur Helper</a>
       <ul class="navbar-nav flex-row">
-        <li class="nav-item me-3">
+        <li class="nav-item">
           <a class="nav-link active" href="#" data-i18n="nav_pictos">Pictos inventory</a>
         </li>
       </ul>
