Remove button icons

--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,18 @@
       <h1 data-i18n="heading_pictos">Pictos inventory</h1>
       <div class="actions">
         <div class="icon-bar">
-          <button class="icon-btn" id="downloadBtn" data-i18n-title="download" title="Download"><i class="fa-solid fa-download"></i></button>
-          <button class="icon-btn" id="uploadBtn" data-i18n-title="upload" title="Upload"><i class="fa-solid fa-upload"></i></button>
-          <button class="icon-btn" id="saveBtn" data-i18n-title="save" title="Sauvegarder"><i class="fa-solid fa-floppy-disk"></i></button>
+          <button class="icon-btn" id="downloadBtn" data-i18n-title="download" title="Download"><img src="resources/images/icons/buttons/download.png" alt=""></button>
+          <button class="icon-btn" id="uploadBtn" data-i18n-title="upload" title="Upload"><img src="resources/images/icons/buttons/upload.png" alt=""></button>
+          <button class="icon-btn" id="saveBtn" data-i18n-title="save" title="Sauvegarder"><img src="resources/images/icons/buttons/save.png" alt=""></button>
           <div class="icon-sep"></div>
-          <button class="icon-btn toggle" id="hideOwnedBtn" data-i18n-title="hide_owned" title="Hide owned"><i class="fa-solid fa-lock"></i></button>
-          <button class="icon-btn toggle" id="hideMissingBtn" data-i18n-title="hide_missing" title="Hide missing"><i class="fa-solid fa-ghost"></i></button>
+          <button class="icon-btn toggle" id="hideOwnedBtn" data-i18n-title="hide_owned" title="Hide owned"><img src="resources/images/icons/buttons/show_found.png" alt=""></button>
+          <button class="icon-btn toggle" id="hideMissingBtn" data-i18n-title="hide_missing" title="Hide missing"><img src="resources/images/icons/buttons/hide_notfound.png" alt=""></button>
           <div class="icon-sep"></div>
-          <button class="icon-btn" id="selectAllBtn" data-i18n-title="select_all" title="Select all"><i class="fa-solid fa-check"></i></button>
-          <button class="icon-btn" id="clearAllBtn" data-i18n-title="clear_all" title="Clear all"><i class="fa-solid fa-trash"></i></button>
+          <button class="icon-btn" id="selectAllBtn" data-i18n-title="select_all" title="Select all"><img src="resources/images/icons/buttons/select_all.png" alt=""></button>
+          <button class="icon-btn" id="clearAllBtn" data-i18n-title="clear_all" title="Clear all"><img src="resources/images/icons/buttons/deselect_all.png" alt=""></button>
           <div class="icon-sep"></div>
-          <button class="icon-btn" id="gridViewBtn" data-i18n-title="grid_view" title="Grid view"><i class="fa-solid fa-th"></i></button>
-          <button class="icon-btn" id="tableViewBtn" data-i18n-title="table_view" title="Table view"><i class="fa-solid fa-table"></i></button>
+          <button class="icon-btn" id="gridViewBtn" data-i18n-title="grid_view" title="Grid view"><img src="resources/images/icons/buttons/tile_view.png" alt=""></button>
+          <button class="icon-btn" id="tableViewBtn" data-i18n-title="table_view" title="Table view"><img src="resources/images/icons/buttons/tab_view.png" alt=""></button>
           <div class="icon-sep"></div>
         </div>
         <input class="searchbar" id="search" placeholder="Search pictos by any field..." data-i18n-placeholder="search_placeholder">
