--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 </head>
 <body class="d-flex flex-column min-vh-100" data-page="pictos">
   <div id="header"></div>
+  <img class="section-frame" src="resources/images/general/frame_horizontal.webp" alt="">
+  <img class="section-separator" src="resources/images/general/separator_horizontal.png" alt="">
   <main class="content-wrapper mt-4 flex-grow-1">
       <h1 data-i18n="heading_pictos">Pictos inventory</h1>
       <div class="actions">
@@ -34,6 +36,8 @@
       <div id="modal" class="modal" style="display:none"><div class="modal-content"></div></div>
       <div id="notificationContainer" class="notification-container"></div>
   </main>
+  <img class="section-frame" src="resources/images/general/frame_horizontal.webp" alt="">
+  <img class="section-separator" src="resources/images/general/separator_horizontal.png" alt="">
   <div id="footer"></div>
   <script src="js/i18n.js"></script>
   <script src="js/script.js"></script>
