Position frame overlays and switch to PNG

--- a/src/weapons.html
+++ b/src/weapons.html
@@ -12,8 +12,8 @@
 </head>
 <body class="d-flex flex-column min-vh-100" data-page="weapons">
   <div id="header"></div>
-  <img class="section-frame" src="resources/images/general/frame_horizontal.webp" alt="">
-  <img class="section-separator" src="resources/images/general/separator_horizontal.png" alt="">
+  <img class="section-frame frame-top" src="resources/images/general/frame_horizontal.png" alt="">
+  <img class="section-separator separator-top" src="resources/images/general/separator_horizontal.png" alt="">
   <main class="content-wrapper mt-4 flex-grow-1">
       <h1 data-i18n="heading_weapons">Weapons inventory</h1>
       <div class="char-select" id="charSelect"></div>
@@ -36,8 +36,8 @@
       <div id="table" class="table-view" style="display:none"></div>
       <div id="notificationContainer" class="notification-container"></div>
   </main>
-  <img class="section-frame" src="resources/images/general/frame_horizontal.webp" alt="">
-  <img class="section-separator" src="resources/images/general/separator_horizontal.png" alt="">
+  <img class="section-frame frame-bottom" src="resources/images/general/frame_horizontal.png" alt="">
+  <img class="section-separator separator-bottom" src="resources/images/general/separator_horizontal.png" alt="">
   <div id="footer"></div>
   <script src="js/i18n.js"></script>
   <script src="js/weapons.js"></script>
