Wrap header buttons in panel

--- a/src/header.html
+++ b/src/header.html
@@ -6,10 +6,12 @@
       <li class="nav-item"><a class="nav-link" href="weapons.html" data-page="weapons" data-i18n="nav_weapons">Weapons inventory</a></li>
     </ul>
     <div class="header-right">
-      <div class="icon-bar header-actions">
-        <button class="icon-btn" id="downloadBtn" data-i18n-title="download" title="Download"><img src="resources/images/icons/buttons/download.png" alt=""></button>
-        <button class="icon-btn" id="uploadBtn" data-i18n-title="upload" title="Upload"><img src="resources/images/icons/buttons/upload.png" alt=""></button>
-        <button class="icon-btn" id="saveBtn" data-i18n-title="save" title="Save"><img src="resources/images/icons/buttons/save.png" alt=""></button>
+      <div class="header-panel">
+        <div class="icon-bar header-actions">
+          <button class="icon-btn" id="downloadBtn" data-i18n-title="download" title="Download"><img src="resources/images/icons/buttons/download.png" alt=""></button>
+          <button class="icon-btn" id="uploadBtn" data-i18n-title="upload" title="Upload"><img src="resources/images/icons/buttons/upload.png" alt=""></button>
+          <button class="icon-btn" id="saveBtn" data-i18n-title="save" title="Save"><img src="resources/images/icons/buttons/save.png" alt=""></button>
+        </div>
       </div>
       <div class="icon-sep"></div>
       <div class="lang-flags">
