feat: unify data storage

--- a/src/weapons.html
+++ b/src/weapons.html
@@ -40,6 +40,7 @@
   <img class="section-separator separator-bottom" src="resources/images/general/separator_horizontal.png" alt="">
   <div id="footer"></div>
   <script src="js/i18n.js"></script>
+  <script src="js/siteStorage.js"></script>
   <script src="js/weapons.js"></script>
   <script src="js/common.js"></script>
 </body>
