Convert static site to React

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="css/bootstrap-lite.css">
   <link rel="stylesheet" href="css/style.css">
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100" data-page="pictos">
   <div id="header"></div>
@@ -39,6 +42,7 @@
   <img class="section-frame frame-bottom" src="resources/images/general/frame_horizontal.png" alt="">
   <img class="section-separator separator-bottom" src="resources/images/general/separator_horizontal.png" alt="">
   <div id="footer"></div>
+  <script type="text/babel" src="js/components.jsx"></script>
   <script src="js/i18n.js"></script>
   <script src="js/siteStorage.js"></script>
   <script src="js/script.js"></script>
