Load router deps

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="../node_modules/react/umd/react.development.js"></script>
   <script src="../node_modules/react-dom/umd/react-dom.development.js"></script>
+  <script src="../node_modules/@remix-run/router/dist/router.umd.js"></script>
+  <script src="../node_modules/react-router/dist/umd/react-router.development.js"></script>
   <script src="../node_modules/react-router-dom/dist/umd/react-router-dom.development.js"></script>
   <script src="../node_modules/@babel/standalone/babel.min.js"></script>
 </head>
