--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
   <div id="app"></div>
+  <script src="config.js"></script>
   <script type="text/babel" src="js/components.jsx"></script>
   <script type="text/babel" src="js/app.jsx"></script>
   <script src="js/i18n.js"></script>
