--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,13 @@
   <script src="../node_modules/@remix-run/router/dist/router.umd.js"></script>
   <script src="../node_modules/react-router/dist/umd/react-router.development.js"></script>
   <script src="../node_modules/react-router-dom/dist/umd/react-router-dom.development.js"></script>
+  <script src="../node_modules/keycloak-js/dist/keycloak.min.js"></script>
   <script src="../node_modules/@babel/standalone/babel.min.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
   <div id="app"></div>
   <script src="config.js"></script>
+  <script src="js/auth.js"></script>
   <script type="text/babel" src="js/components.jsx"></script>
   <script type="text/babel" src="js/app.jsx"></script>
   <script src="js/i18n.js"></script>
