--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
   <script type="text/babel" src="js/app.jsx"></script>
   <script src="js/i18n.js"></script>
   <script src="js/siteStorage.js"></script>
+  <script src="js/auth.js"></script>
   <script src="js/script.js"></script>
   <script src="js/weapons.js"></script>
 </body>
