--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <script src="../node_modules/@remix-run/router/dist/router.umd.js"></script>
   <script src="../node_modules/react-router/dist/umd/react-router.development.js"></script>
   <script src="../node_modules/react-router-dom/dist/umd/react-router-dom.development.js"></script>
-  <script src="../node_modules/keycloak-js/dist/keycloak.min.js"></script>
+  <script src="../node_modules/keycloak-js/lib/keycloak.js"></script>
   <script src="../node_modules/@babel/standalone/babel.min.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
