--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
   <div id="app"></div>
   <script src="config.js"></script>
   <script src="js/auth.js"></script>
-  <script type="text/babel" src="js/components.jsx"></script>
-  <script type="text/babel" src="js/app.jsx"></script>
+  <script type="text/babel" data-type="module" src="js/components.jsx"></script>
+  <script type="text/babel" data-type="module" src="js/app.jsx"></script>
   <script src="js/i18n.js"></script>
   <script src="js/siteStorage.js"></script>
   <script src="js/script.js"></script>
