--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <title>Clair Obscur Helper</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../node_modules/@fontsource/cinzel/index.css">
-  <link rel="stylesheet" href="../node_modules/flag-icons/css/flag-icons.min.css">
-  <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="/node_modules/@fontsource/cinzel/index.css">
+  <link rel="stylesheet" href="/node_modules/flag-icons/css/flag-icons.min.css">
+  <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="css/bootstrap-lite.css">
   <link rel="stylesheet" href="css/style.css">
-  <script src="../node_modules/react/umd/react.development.js"></script>
-  <script src="../node_modules/react-dom/umd/react-dom.development.js"></script>
-  <script src="../node_modules/@remix-run/router/dist/router.umd.js"></script>
-  <script src="../node_modules/react-router/dist/umd/react-router.development.js"></script>
-  <script src="../node_modules/react-router-dom/dist/umd/react-router-dom.development.js"></script>
+  <script src="/node_modules/react/umd/react.development.js"></script>
+  <script src="/node_modules/react-dom/umd/react-dom.development.js"></script>
+  <script src="/node_modules/@remix-run/router/dist/router.umd.js"></script>
+  <script src="/node_modules/react-router/dist/umd/react-router.development.js"></script>
+  <script src="/node_modules/react-router-dom/dist/umd/react-router-dom.development.js"></script>
   <script type="module" src="js/keycloak-adapter.js"></script>
 
-  <script src="../node_modules/@babel/standalone/babel.min.js"></script>
+  <script src="/node_modules/@babel/standalone/babel.min.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
   <div id="app"></div>
