--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
   <div id="app"></div>
   <script src="config.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/datagrid-bundle.js"></script>
   <script type="text/babel" src="js/components.jsx"></script>
   <script type="text/babel" src="js/app.jsx"></script>
   <script src="js/i18n.js"></script>
