Remove bundled DataGrid and load official UMD build

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
   <script src="../node_modules/@remix-run/router/dist/router.umd.js"></script>
   <script src="../node_modules/react-router/dist/umd/react-router.development.js"></script>
   <script src="../node_modules/react-router-dom/dist/umd/react-router-dom.development.js"></script>
+  <script src="../node_modules/@mui/material/umd/material-ui.development.js"></script>
+  <link rel="stylesheet" href="../node_modules/@mui/x-data-grid/umd/material-ui-x-data-grid.css">
+  <script src="../node_modules/@mui/x-data-grid/umd/material-ui-x-data-grid.development.js"></script>
   <script type="module" src="js/keycloak-adapter.js"></script>
 
   <script src="../node_modules/@babel/standalone/babel.min.js"></script>
@@ -22,7 +25,6 @@
   <div id="app"></div>
   <script src="config.js"></script>
   <script src="js/auth.js"></script>
-  <script src="js/datagrid-bundle.js"></script>
   <script type="text/babel" src="js/components.jsx"></script>
   <script type="text/babel" src="js/app.jsx"></script>
   <script src="js/i18n.js"></script>
