--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,7 @@
   <script src="../node_modules/@remix-run/router/dist/router.umd.js"></script>
   <script src="../node_modules/react-router/dist/umd/react-router.development.js"></script>
   <script src="../node_modules/react-router-dom/dist/umd/react-router-dom.development.js"></script>
-  <script src="../node_modules/@mui/material/umd/material-ui.development.js"></script>
-  <link rel="stylesheet" href="../node_modules/@mui/x-data-grid/umd/material-ui-x-data-grid.css">
-  <script src="../node_modules/@mui/x-data-grid/umd/material-ui-x-data-grid.development.js"></script>
+  <script src="js/datagrid-bundle.js"></script>
   <script type="module" src="js/keycloak-adapter.js"></script>
 
   <script src="../node_modules/@babel/standalone/babel.min.js"></script>
