feat: cache API data

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
   <script type="text/babel" src="js/components.jsx"></script>
   <script type="text/babel" src="js/app.jsx"></script>
   <script src="js/i18n.js"></script>
+  <script src="js/dataLoader.js"></script>
   <script src="js/siteStorage.js"></script>
   <script src="js/script.js"></script>
   <script src="js/weapons.js"></script>
