--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,14 @@
   <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="css/bootstrap-lite.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../node_modules/react-toastify/dist/ReactToastify.css">
   <script src="../node_modules/react/umd/react.development.js"></script>
   <script src="../node_modules/react-dom/umd/react-dom.development.js"></script>
   <script src="../node_modules/@remix-run/router/dist/router.umd.js"></script>
   <script src="../node_modules/react-router/dist/umd/react-router.development.js"></script>
   <script src="../node_modules/react-router-dom/dist/umd/react-router-dom.development.js"></script>
   <script src="js/datagrid-bundle.js"></script>
+  <script src="js/toastify-bundle.js"></script>
   <script type="module" src="js/keycloak-adapter.js"></script>
 
   <script src="../node_modules/@babel/standalone/babel.min.js"></script>
