--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Clair Obscur Helper</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
   <link rel="stylesheet" href="../node_modules/@fontsource/cinzel/index.css">
   <link rel="stylesheet" href="../node_modules/flag-icons/css/flag-icons.min.css">
   <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
