Add outfit inventory section

--- a/src/index.html
+++ b/src/index.html
@@ -33,5 +33,6 @@
   <script src="js/siteStorage.js"></script>
   <script src="js/script.js"></script>
   <script src="js/weapons.js"></script>
+  <script src="js/outfits.js"></script>
 </body>
 </html>
