--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Clair Obscur Helper</title>
+  <link rel="icon" type="image/png" href="resources/images/icons/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
   <link rel="stylesheet" href="../node_modules/@fontsource/cinzel/index.css">
