--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,14 @@
   <title>Clair Obscur Helper</title>
   <link rel="icon" type="image/png" href="resources/images/icons/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Offline inventory manager for Clair Obscur pictos, weapons and outfits with team builder.">
+  <meta name="keywords" content="clair obscur,pictos,weapons,outfits,team builder,game helper">
+  <meta property="og:title" content="Clair Obscur Helper">
+  <meta property="og:description" content="Manage your Clair Obscur collection and build your team online or offline.">
+  <meta property="og:image" content="resources/images/icons/icon_base_maxsize.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://clair-obscur.example.com/">
+  <link rel="canonical" href="https://clair-obscur.example.com/">
   <base href="/">
   <link rel="stylesheet" href="../node_modules/@fontsource/cinzel/index.css">
   <link rel="stylesheet" href="../node_modules/flag-icons/css/flag-icons.min.css">
